@@ -1,3 +1,7 @@
+2010-08-25  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #15547: htmlArea RTE may load extJS debug script in FE which makes page loading slow
+
 2010-08-24  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #15439: htmlArea RTE: Deprecated call-time pass-by-reference
